Fix Bug 443108 - Ability to copy tables with original formatting

BUG: 443108
FIXED-IN: 5.18.2