messageviewer/src/viewer/viewer_p.cpp
@@ -2626,11 +2626,7 @@ void ViewerPrivate::slotCopyImageLocation()
 
 void ViewerPrivate::slotCopySelectedText()
 {
-#ifndef QT_NO_CLIPBOARD
-    QString selection = mViewer->selectedText();
-    selection.replace(QChar::Nbsp, QLatin1Char(' '));
-    QApplication::clipboard()->setText(selection);
-#endif
+    mViewer->triggerPageAction(QWebEnginePage::Copy);
 }
 
 void ViewerPrivate::viewerSelectionChanged()
